--- a/index.html
+++ b/index.html
@@ -53,33 +53,36 @@
 
   <main>
     <section id="proiecte">
-  <h2>Proiecte</h2>
+      <h2>Proiecte</h2>
 
-  <h3>Sistem de bibliotecă (C++)</h3>
-  <p>Aplicație de tip consolă pentru gestionarea cărților. <br/>
-  <strong>Tehnologii:</strong> C++, STL<br/>
-  <a href="biblioteca.html">Vezi codul sursă</a></p>
+      <h3>Sistem de bibliotecă (C++)</h3>
+      <p>Aplicație de tip consolă pentru gestionarea cărților. <br/>
+      <strong>Tehnologii:</strong> C++, STL<br/>
+      <a href="biblioteca.html">Vezi codul sursă</a></p>
 
-  <h3>Joc Python 2D</h3>
-  <p>Joc cu obstacole și scor folosind Pygame. <br/>
-  <strong>Tehnologii:</strong> Python, Pygame<br/>
-  <a href="Python_game.html">Vezi codul sursă</a></p>
+      <h3>Joc Python 2D</h3>
+      <p>Joc cu obstacole și scor folosind Pygame. <br/>
+      <strong>Tehnologii:</strong> Python, Pygame<br/>
+      <a href="Python_game.html">Vezi codul sursă</a></p>
 
-  <h3>Aplicație bibliotecă (PowerApps)</h3>
-  <p>Aplicație low-code cu baze de date SharePoint. <br/>
-  <strong>Tehnologii:</strong> PowerApps, PowerAutomate<br/>
-  <a href="Powerapps.html">Capturi proiect</a></p>
+      <h3>Aplicație bibliotecă (PowerApps)</h3>
+      <p>Aplicație low-code cu baze de date SharePoint. <br/>
+      <strong>Tehnologii:</strong> PowerApps, PowerAutomate<br/>
+      <a href="Powerapps.html">Capturi proiect</a></p>
 
-  <h3>Joc 3D (Unreal Engine)</h3>
-  <p>Harta 3D cu soldați, AI și arme. <br/>
-  <strong>Tehnologii:</strong> Unreal Engine 5, Blueprint, C++<br/>
-  <a href="UE5.html">Capturi proiect</a></p>
-      
+      <h3>Joc 3D (Unreal Engine)</h3>
+      <p>Harta 3D cu soldați, AI și arme. <br/>
+      <strong>Tehnologii:</strong> Unreal Engine 5, Blueprint, C++<br/>
+      <a href="UE5.html">Capturi proiect</a></p>
+    </section>
+
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="https://mail.google.com/mail/?view=cm&to=raducanu.alexandru2005@gmail.com" target="_blank">
-raducanu.alexandru2005@gmail.com</a></p>
-
+      <p>Email: 
+        <a href="https://mail.google.com/mail/?view=cm&to=raducanu.alexandru2005@gmail.com" target="_blank">
+          raducanu.alexandru2005@gmail.com
+        </a>
+      </p>
     </section>
   </main>
 
