--- a/Powerapps.html
+++ b/Powerapps.html
@@ -113,14 +113,14 @@
 
   <p>Acest proiect a fost realizat în PowerApps în semestrul 2 și simulează funcționalitatea unui sistem de gestiune pentru o bibliotecă digitală. Include formulare pentru adăugare și căutare de cărți, validări de câmpuri și interfață user-friendly conectată la un SharePoint List.</p>
 
-  <div class="gallery">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\Powerapps\Picture1.jpg" alt="">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\Powerapps\Picture2.jpg" alt="">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\Powerapps\Picture3.png" alt="">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\Powerapps\Picture4.jpg" alt="">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\Powerapps\Picture5.png" alt="">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\Powerapps\Picture6.jpg" alt="">
-  </div>
+ <div class="gallery">
+  <img src="Papp1.jpg" alt="">
+  <img src="Papp2.jpg" alt="">
+  <img src="Papp3.jpg" alt="">
+  <img src="Papp4.jpg" alt="">
+  <img src="Papp5.jpg" alt="">
+  <img src="Papp6.jpg" alt="">
+</div>
 
   
 
