--- a/UE5.html
+++ b/UE5.html
@@ -116,12 +116,12 @@
   </p>
 
   <div class="gallery">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\UE5\Picture1.png" alt="Hartă 3D Unreal Engine">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\UE5\Picture2.png" alt="Soldat pe hartă">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\UE5\Picture3.png" alt="Blueprint comportament AI">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\UE5\Picture4.png" alt="Editor Unreal - overview">
-    <img src="C:\Users\raduc\Documents\Site web\imagini\UE5\Picture5.png" alt="Gameplay în acțiune">
-  </div>
+  <img src="UE1.png" alt="Hartă 3D Unreal Engine">
+  <img src="UE2.png" alt="Soldat pe hartă">
+  <img src="UE3.png" alt="Blueprint comportament AI">
+  <img src="UE4.png" alt="Editor Unreal - overview">
+  <img src="UE5.png" alt="Gameplay în acțiune">
+</div>
 
   
 
