--- a/Powerapps.html
+++ b/Powerapps.html
@@ -116,9 +116,9 @@
  <div class="gallery">
   <img src="Papp1.jpg" alt="">
   <img src="Papp2.jpg" alt="">
-  <img src="Papp3.jpg" alt="">
+  <img src="Papp3.png" alt="">
   <img src="Papp4.jpg" alt="">
-  <img src="Papp5.jpg" alt="">
+  <img src="Papp5.png" alt="">
   <img src="Papp6.jpg" alt="">
 </div>
 
