--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       <p>Harta 3D cu soldați, AI și arme. <br/>
       <strong>Tehnologii:</strong> Unreal Engine 5, Blueprint, C++<br/>
       <a href="UE5.html">Capturi proiect</a></p>
+
+      <h3>Java Full Stack – Bibliotecă + Bancă + Server</h3>
+      <p>Aplicații dezvoltate integral în Java: bibliotecă, aplicație bancară și server (porturi + confirmări).</p>
+      <p>Tehnologii: Java, OOP, (Sockets), Eclipse</p>
+      <a href="java-fullstack.html">Detalii proiect</a>
+
     </section>
 
     <section id="contact">
@@ -91,3 +97,4 @@
   </footer>
 </body>
 </html>
+
