--- a/java-fullstack.html
+++ b/java-fullstack.html
@@ -100,9 +100,9 @@
   <section class="card">
     <h2>Descriere</h2>
     <p>
-      Set de aplicații dezvoltate <strong>100% de la zero</strong> în <strong>Java (Eclipse)</strong>,
-      cu interfață <strong>JavaFX</strong>, stocare în <strong>fișiere</strong> și comunicare
-      client–server prin <strong>sockets</strong> pe porturile <strong>5000</strong> și <strong>5001</strong>.
+      Set de aplicații dezvoltate 100% în <strong>Java (Eclipse)</strong>,
+      cu interfață <strong>JavaFX</strong>, stocare în fișiere și comunicare
+      client–server prin sockets pe porturile <strong>5000</strong> și <strong>5001</strong>.
     </p>
   </section>
 
