--- a/java-fullstack.html
+++ b/java-fullstack.html
@@ -115,7 +115,7 @@
       <li>Persistență în fișiere locale</li>
     </ul>
 
-    <h4>Imagini aplicație (adaugă tu pozele)</h4>
+    <h4>Imagini aplicație</h4>
     <div class="gallery">
       <img src="img/lib1.png" alt="Bibliotecă - ecran 1">
       <img src="img/lib2.png" alt="Bibliotecă - ecran 2">
@@ -134,7 +134,7 @@
       <li>Stocare în fișiere</li>
     </ul>
 
-    <h4>Imagini aplicație (adaugă tu pozele)</h4>
+    <h4>Imagini aplicație</h4>
     <div class="gallery">
       <img src="img/bank1.png" alt="Bancă - ecran 1">
       <img src="img/bank2.png" alt="Bancă - ecran 2">
