--- a/java-fullstack.html
+++ b/java-fullstack.html
@@ -117,11 +117,11 @@
 
     <h4>Imagini aplicație</h4>
     <div class="gallery">
-      <img src="img/lib1.png" alt="Bibliotecă - ecran 1">
-      <img src="img/lib2.png" alt="Bibliotecă - ecran 2">
-      <img src="img/lib3.png" alt="Bibliotecă - ecran 3">
-      <img src="img/lib4.png" alt="Bibliotecă - ecran 4">
-      <img src="img/lib5.png" alt="Bibliotecă - ecran 5">
+      <img src="lib1.png" alt="Bibliotecă - ecran 1">
+      <img src="lib2.png" alt="Bibliotecă - ecran 2">
+      <img src="lib3.png" alt="Bibliotecă - ecran 3">
+      <img src="lib4.png" alt="Bibliotecă - ecran 4">
+      <img src="lib5.png" alt="Bibliotecă - ecran 5">
     </div>
   </section>
 
@@ -136,11 +136,11 @@
 
     <h4>Imagini aplicație</h4>
     <div class="gallery">
-      <img src="img/bank1.png" alt="Bancă - ecran 1">
-      <img src="img/bank2.png" alt="Bancă - ecran 2">
-      <img src="img/bank3.png" alt="Bancă - ecran 3">
-      <img src="img/bank4.png" alt="Bancă - ecran 4">
-      <img src="img/bank5.png" alt="Bancă - ecran 5">
+      <img src="bank1.png" alt="Bancă - ecran 1">
+      <img src="bank2.png" alt="Bancă - ecran 2">
+      <img src="bank3.png" alt="Bancă - ecran 3">
+      <img src="bank4.png" alt="Bancă - ecran 4">
+      <img src="bank5.png" alt="Bancă - ecran 5">
     </div>
   </section>
 
